Still fixing collapsing margins...

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -39,7 +39,7 @@ body {
 #main {
 	width: 100%;
 	height: 100%;
-	margin-top: 0;
+	margin-top: 10px;
 	margin-left: auto;
 	margin-right: auto;
 }
